<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:padding="5dp"
    android:layout_marginBottom="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:baselineAligned="false">
<LinearLayout
    android:layout_weight="1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/day_date_view"
            android:gravity="center"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textSize="24sp"/>

<LinearLayout
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:orientation="vertical">
        <TextView
            android:id="@+id/day_max_temp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/day_min_temp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorHint"/>
</LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/weather_precip_chance"
                />
        <TextView
            android:id="@+id/day_precip_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/weather_humidity"
                />
            <TextView
                android:id="@+id/day_humid_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/weather_max_wind"
                />
            <TextView
                android:id="@+id/day_wind_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>